-
Bug
-
Resolution: Fixed
-
Major
-
None
-
None
-
3
-
9223372036854775807
Don't create and start new transaction in
osp_precreate_reserve (osp_sync_force)
because it has been already started in mdd_create.
New transaction rewrites oti_declare_ops_cred
resulting in assert in osd_trans_exec_op:
osd_trans_exec_op()) lustre-MDT0000: opcode 3: credits = 0, rollback = 4 osd_trans_exec_op()) ASSERTION( !ldiskfs_track_declares_assert ) failed: